Tutorial material and fix metadata in find_var

--- a/inst/tutorial/ALSPAC.helper_tutorial.Rmd
+++ b/inst/tutorial/ALSPAC.helper_tutorial.Rmd
@@ -35,47 +35,166 @@ library(ALSPAC.helpR)
 ## 1. Load the data
 
 First thing you usually need to do is *read* the dataset in memory. So meet our first
-function: **`load_alspac()`** that can do a few useful things: - reads .sav format - about
-15.500 rows and maybe also loads of columns (takes a second)
+function: **`load_alspac()`** that can do a few useful things:
 
-```{r, eval=F, echo=T}
-?load_alspac
+-   reads SPSS (`.sav`) format
+-   typically, almost 16.000 rows and maybe also loads of columns (\~10.000), so give him
+    a minute, will tell you when he is done
 
-data <- load_alspac() # Opens interactive window to choose file
-# Note: by default, the function transforms all variable names to lowercase (set lower.case=FALSE if this is not desired)
+[Defaults]{.underline}:
+
+-   opens interactive window unless `filepath` is specified
+-   `lower.case = TRUE` all column names are lower cased (also the metadata)
+-   `keep.value.labels = TRUE` let's talk about the format of ALSPAC data (and SPSS)
+-   `load.metadata = FALSE` metadata is lazy by default
+
+[Tip]{.underline}: call the dataset "data", see why in a minute...
+
+```{r loading}
+# ?load_alspac
+
+data <- load_alspac( # filepath = NULL, 
+  lower.case = TRUE,
+  keep.value.labels = TRUE,
+  load.metadata = FALSE
+)
 ```
 
-## Explore dataset
+#### The metadata file
 
-```{r, eval=F, echo=T}
-# Find all variables in "data" whose names start with "f01"
-find_var('f01',  method='starts')
+This is just a dataframe taken from the ALSPAC website (aka what you see on the variable
+search tool) Why having this in your R session?
+
+-   this is filtered for the variables that you have in the dataset
+-   it has additional information about age of measurement
+-   you can use it to inspect the data or embed metadata information in your script
+
+```{r}
+?alspac_metadata
+
+# No data file available, just want to inspect _all_ data?
+# No problem 
+all_metadata <- ALSPAC.helpR::alspac_metadata
+```
+
+## 2. Explore dataset
+
+OK, we've got the data, let's do something fun with it now.
+
+Whether you load metadata explicitly or not, you can use it to explore the dataset using
+two functions: **`find_var()`** and **`find_lab()`**
+
+-   They each have a shortcut because I fully endorse lazy typing: `fv()` and `fl()`
+-   Also if you named your dataset "data" (like I told you) you win extra non-typing time
+    (use the `data` argument otherwise)
+-   They take a string, and understand *regex* (but can also use the `method` argument if
+    you don't remember, possible values: "starts", "ends", "contains")
+-   `print.labels = FALSE` will return a vector of variable names (that you can use for
+    example for transforming) rather than the dataframe
+
+```{r}
+# ?find_var
+
+# Find all variables names in "data" whose names start with "c2"
+find_var('c2', 
+         # data = data,
+         method='starts', 
+         print.labels = TRUE,
+         to.data.frame = FALSE)
+```
+
+```{r}
 # OR, to save some typing 
-fv('f01',  method='starts')
+fv('^b', data1)
+```
 
+Searching for concepts (aka the labels)
+
+```{r}
+# ?find_lab
 # Find all the variable labels that mention "income"
-find_lab('income')
-# OR, to save some typing 
-fl('income')
+find_lab('job', 
+         case.sensitive = FALSE)
+```
 
-# Seelect some variables
+```{r}
+# OR, to save some typing 
+fl('depression')
+```
+
+You can also select variable you computed or renamed (more in the docs)
+
+```{r}
+# Select some variables with common root
 select_var('depre', times=c(1,3)) # returns, for example c('depre_1','depre_3')
+
 # OR, to save some typing 
 sel('depre')
-
 ```
 
-## Clean dataset
+## 3. Clean dataset
 
-```{r, eval=F, echo=T}
+#### Create a unique identifier
+
+> [Attention]{.underline} what looks like the id variable is **not** a unique identifier!
+> You need to make this by combining the `cidb` variable with `qlet`. Can do just that
+> with **`make_idc()`**
+
+-   same as before, if your data is called "data" that saves some typing
+
+```{r}
+?make_idc
 # Create unique identifier
-data$IDC <- make_idc(mom.id='id123') 
-# Create sex factor
-data$sex <- make_sex_factor()
+cbind(idc = make_idc(mom.id='cidb1234'), data)
 
+# If you don't care about the position
+# data$IDC <- make_idc(mom.id='cidb1234') 
+```
+
+#### Select siblings
+
+Often you want to exclude related individuals (i.e. one of the two) from the analyses
+**`rm_siblings()`** helps with that
+
+-   it looks for a unique identifier (called `"idc"` by default) of the type `make_idc()`
+    outputs. If he doesn't find it, calls `make_idc()` internally (using the `mom.id` and
+    `parity` optional variable names)
+-   `method` is the most useful argument I think, it allows to control who to exclude.
+    Default is **"random"** = one sibling is randomly selected for each pair. **"parity"**
+    = the oldest sibling is retained in the dataset. **"missing"** = the sibling with the
+    lowest number of missing values is retained. Missing rates are computed over the
+    entire data dataset or only over the columns specified in `column_selection`.
+-   as usual "data" is the default name of the dataframe
+
+```{r}
+# ?rm_siblings
 # Remove one of the sibling couple randomly
-data_nosibl <- rm_siblings(method='random')
+data_nosibl <- rm_siblings(
+  # idc = "idc",
+  method = "random",
+  # column_selection = "all",
+  # seed = 310896,
+  # mom.id = "cidb1234",
+  # parity = "qlet",
+  # data = NULL
+)
+```
+
+#### Remove outliers
+
+```{r}
+# ?rm_outliers
 
 # Remove outliers 
 data$horses <- rm_outliers('unicorns', cutoff=3.5)
 ```
+
+## 4. Scoring, recoding and other fun stuff
+
+-   `dichotomize()`
+
+-   `dichotomize_cont()`
+
+-   `ccei_score()`
+
+-   `epds_score()`
