--- a/inst/tutorial/ALSPAC.helper_tutorial.Rmd
+++ b/inst/tutorial/ALSPAC.helper_tutorial.Rmd
@@ -56,14 +56,16 @@ function: **`load_alspac()`** that can do a few useful things:
 data <- load_alspac( # filepath = NULL, 
   lower.case = TRUE,
   keep.value.labels = TRUE,
-  load.metadata = FALSE
+  load.metadata = TRUE
 )
 ```
 
 #### The metadata file
 
-This is just a dataframe taken from the ALSPAC website (aka what you see on the variable
-search tool) Why having this in your R session?
+This is just a dataframe taken from the ALSPAC website (aka what you see on the [variable
+search
+tool](https://variables.alspac.bris.ac.uk/?_gl=1*1il3dnn*_ga*NzkyNjg3OTQ3LjE3MDcyMTY2ODA.*_ga_6R8SPL3HLT*MTcwNzIxNjY4MC4xLjAuMTcwNzIxNjY4MC42MC4wLjA.&_ga=2.28553148.1407887277.1707216680-792687947.1707216680))
+Why having this in your R session?
 
 -   this is filtered for the variables that you have in the dataset
 -   it has additional information about age of measurement
@@ -105,7 +107,7 @@ find_var('c2',
 
 ```{r}
 # OR, to save some typing 
-fv('^b', data1)
+fv('^b')
 ```
 
 Searching for concepts (aka the labels)
@@ -119,7 +121,7 @@ find_lab('job',
 
 ```{r}
 # OR, to save some typing 
-fl('depression')
+fl('depression$')
 ```
 
 You can also select variable you computed or renamed (more in the docs)
@@ -171,13 +173,14 @@ Often you want to exclude related individuals (i.e. one of the two) from the ana
 # Remove one of the sibling couple randomly
 data_nosibl <- rm_siblings(
   # idc = "idc",
-  method = "random",
-  # column_selection = "all",
+  method = "missing",
+  column_selection = "all",
   # seed = 310896,
   # mom.id = "cidb1234",
   # parity = "qlet",
   # data = NULL
 )
+# establish rank of importance
 ```
 
 #### Remove outliers
@@ -187,6 +190,8 @@ data_nosibl <- rm_siblings(
 
 # Remove outliers 
 data$horses <- rm_outliers('unicorns', cutoff=3.5)
+
+# Winsor
 ```
 
 ## 4. Scoring, recoding and other fun stuff
